--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -4316,9 +4316,525 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b34063c",
+   "metadata": {},
+   "source": [
+    "# Nested list\n",
+    "list within list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "ad9423f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3.4, 5.6], [True, False], ['sql', 'python']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =[[1,2],[3.4,5.6],[True,False],['sql','python']]\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eab6ef6",
+   "metadata": {},
+   "source": [
+    "# Nested tuple\n",
+    "tuple within tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "e13b6395",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2), (3, 4, (True, False)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = ((1,2),(3,4,(True,False)))\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d269270",
+   "metadata": {},
+   "source": [
+    "# Nested dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "5bfcd62a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'classA': {'name': 'Satvik'}, 'classB': {'name': 'Arya'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = {'classA':{'name':'Satvik'},'classB':{'name':'Arya'}}\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "839230a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3.4, 5.6], [True, False], ['sql', 'python']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =[[1,2],[3.4,5.6],[True,False],['sql','python']]\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "5df7ed0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fetch True\n",
+    "A[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "16ebb59f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fetch python\n",
+    "A[3][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "272816df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fetch false\n",
+    "A[2][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "7c18717a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fetch True\n",
+    "A[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "6495311a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fetch python\n",
+    "A[-1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "853c7f98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[3][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f699de0",
+   "metadata": {},
+   "source": [
+    "# Methods\n",
+    "👉 Methods are like special tools that come with an object, like a string or a list. They are specific to that object, and you use them by putting a dot . after the object's name. For example, \"hello\".upper() is a method that makes the string all uppercase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "6132bd02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = 'python'\n",
+    "len(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9f81729f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PYTHON'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "7c4b8bbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "1b36d0d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO WORLD'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"hello world\".upper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e42eb75a",
+   "metadata": {},
+   "source": [
+    "# CRUD operations\n",
+    "\n",
+    "* C: create\n",
+    "* R : read\n",
+    "* U : update\n",
+    "* D : delete"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "100327ca",
+   "metadata": {},
+   "source": [
+    "# List methods and functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "bbbdb847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating list\n",
+    "A =[10,20,30,40,50]\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "eba4441d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blue', 'green', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = list(('blue','green','orange'))\n",
+    "print(colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "efd8484d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List functions: sum,type,min,max,len,range,enumerate,eval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77e53071",
+   "metadata": {},
+   "source": [
+    "# Update:Modify the list elements\n",
+    "* append\n",
+    "* insert\n",
+    "* extend\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "3ae3f906",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 200, 'sql', 400, 500, 600, 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [100 , 200 , 'sql' , 400 , 500, 600,'python']\n",
+    "print(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "9ba1ea9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 200, 300, 400, 500, 600, 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# changing sql as 300\n",
+    "A[2] = 300\n",
+    "print(A) # changing element using indexing or slicing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2563c954",
+   "metadata": {},
+   "source": [
+    "# append\n",
+    "append is method which is used to add single element at the end of list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "dbae72ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['IBM', 'Oracle', 'Almabetter', 'Amazon', 'Google']\n"
+     ]
+    }
+   ],
+   "source": [
+    "companies=['IBM','Oracle','Almabetter','Amazon','Google']\n",
+    "# add Infosys at the end of list\n",
+    "\n",
+    "print(companies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "cc3796fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['IBM', 'Oracle', 'Almabetter', 'Amazon', 'Google', 'Infosys']\n"
+     ]
+    }
+   ],
+   "source": [
+    "companies.append('Infosys')\n",
+    "print(companies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "bccac96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['IBM', 'Oracle', 'Almabetter', 'Amazon', 'Google', 'Infosys', 'TCS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add TCS at the end of list\n",
+    "companies.append('TCS')\n",
+    "print(companies)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad9423f9",
+   "id": "417a4a06",
    "metadata": {},
    "outputs": [],
    "source": []
