del function updated

--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -4832,9 +4832,452 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1817819b",
+   "metadata": {},
+   "source": [
+    "# Insert\n",
+    "It is a method in list used to add new element at certain index position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "417a4a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000, 2000, 3000, 4000, 6000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [1000,2000,4000,6000]\n",
+    "# insert 3000 between 2000 and 4000\n",
+    "# A.insert(index_num,value)\n",
+    "A.insert(2 , 3000)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "ca77aefc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000, 2000, 3000, 4000, 5000, 6000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert 5000 after 4000\n",
+    "A.insert(4,5000)\n",
+    "print(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "07f73254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000, 2000, 3000, 'Hello', 4000, 5000, 6000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert hello at 3rd index position\n",
+    "A.insert(3,\"Hello\")\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b90a180",
+   "metadata": {},
+   "source": [
+    "# Extend\n",
+    "* It is a method used to combine elements of multiple list into one\n",
+    "* Used to add multiple values at the end of list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "9ba4606b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 'a', 'b', 'c', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =[1,2,3,4]\n",
+    "B = ['a','b','c','e']\n",
+    "# add all the elements of B at the end of A\n",
+    "A.extend(B)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "e84da596",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'e', 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =[1,2,3,4]\n",
+    "B = ['a','b','c','e']\n",
+    "B.extend(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6c0bd43",
+   "metadata": {},
+   "source": [
+    "# How to drop list elements\n",
+    "* remove\n",
+    "* pop\n",
+    "* del\n",
+    "* clear"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d6188a6",
+   "metadata": {},
+   "source": [
+    "# remove\n",
+    "It is used to remove specific element by its name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "8b443b15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics', 'Biology', 'English']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects = [\"Maths\",\"physics\",\"chemistry\",\"Biology\",\"English\"]\n",
+    "# remove chemistry\n",
+    "subjects.remove('chemistry')\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "0db04f4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics', 'English']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects.remove('Biology')\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "1204ecb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects.remove('English')\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "3f2110e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[143]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msubjects\u001b[49m\u001b[43m.\u001b[49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mMaths\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(subjects)\n",
+      "\u001b[31mValueError\u001b[39m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "subjects.remove('Maths')\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42ed73a",
+   "metadata": {},
+   "source": [
+    "# pop\n",
+    "* Used to remove the last element\n",
+    "* Used to remove element using index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "cf86800c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics', 'chemistry', 'Biology', 'English']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects = [\"Maths\",\"physics\",\"chemistry\",\"Biology\",\"English\"]\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "fe213526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics', 'chemistry', 'Biology']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects.pop()\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "04b94941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maths', 'physics', 'chemistry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects.pop()\n",
+    "print(subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "37ae3fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pyspark'"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skills = [\"python\",\"R\",\"Java\",\"C+\",\"pyspark\"]\n",
+    "skills.pop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "aff95840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'R', 'Java', 'C+']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "3c67b5a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'Java', 'C+', 'pyspark']\n"
+     ]
+    }
+   ],
+   "source": [
+    "skills = [\"python\",\"R\",\"Java\",\"C+\",\"pyspark\"]\n",
+    "# remove R using pop\n",
+    "skills.pop(1)\n",
+    "print(skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "1dcf1780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'Java', 'pyspark']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove C+\n",
+    "skills.pop(2)\n",
+    "print(skills)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd834d2f",
+   "metadata": {},
+   "source": [
+    "# del\n",
+    "It is used to remove element of list using index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "988ff204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'R', 'C+', 'pyspark']\n"
+     ]
+    }
+   ],
+   "source": [
+    "skills = [\"python\",\"R\",\"Java\",\"C+\",\"pyspark\"]\n",
+    "# remove Java\n",
+    "del skills[2]\n",
+    "print(skills)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "b88921db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'C+', 'pyspark']\n"
+     ]
+    }
+   ],
+   "source": [
+    "del skills[1]\n",
+    "print(skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "bc129183",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'C+']\n"
+     ]
+    }
+   ],
+   "source": [
+    "del skills[-1]\n",
+    "print(skills)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417a4a06",
+   "id": "0b6edfac",
    "metadata": {},
    "outputs": [],
    "source": []
