--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -8927,16 +8927,659 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c413f68b",
+   "id": "26f5c581",
    "metadata": {},
    "source": [
-    "# Thank you"
+    "# split\n",
+    "\n",
+    "Used to split string into list of substrings based on delimeter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "31ed7b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['python',\n",
+       " 'is',\n",
+       " 'easy',\n",
+       " 'only',\n",
+       " 'if',\n",
+       " 'we',\n",
+       " 'practice',\n",
+       " 'more',\n",
+       " 'python',\n",
+       " 'problems']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = \"python is easy only if we practice more python problems\"\n",
+    "# ['python', 'is', 'easy', 'only', 'if', 'we', 'practice', 'more', 'python', 'problems']\n",
+    "A.split() # Splitted based on space\n",
+    "# by default delimeter=space"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ede7c5de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one', 'two', 'three', 'four']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = \"one@two@three@four\"\n",
+    "# ['one','two','three','four']\n",
+    "B.split('@') # here delimeter is @"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f3d61657",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['blue', 'orange', 'yellow', 'green']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = \"blue,orange,yellow,green\"\n",
+    "c.split(',') # here delimeter is ,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "49cd19f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['monday', 'tuesday*wednesday+thursday']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = \"monday@tuesday*wednesday+thursday\"\n",
+    "c.split('@') # here delimeter is @  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b2e12a6",
+   "metadata": {},
+   "source": [
+    "# join\n",
+    "join method is used to convert list in to  string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "18f06cdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python is easy only if we practice more python problems'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = ['python', 'is', 'easy', 'only', 'if', 'we', 'practice', 'more', 'python', 'problems']\n",
+    "#convert list in to string\n",
+    "' '.join(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b8753d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sql is easy only if we practice\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = ['sql', 'is','easy','only','if','we','practice']\n",
+    "B = ' '.join(B)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "f060ee61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'one two three four'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C = ['one','two','three','four']\n",
+    "\" \".join(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "05756bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'one,two,three,four'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\",\".join(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6852486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'iitvivekroper@gmail.com'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = ['iitvivek','roper','@gmail.com'] # list to string\n",
+    "\"\".join(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f0c75be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'iitvivekroper@gmail.com'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tuple to string\n",
+    "E = ('iitvivek','roper','@gmail.com')\n",
+    "\"\".join(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e9bf0d80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'namedomain'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dictionary to string is not possible\n",
+    "F = {'name': 'iitvivek', 'domain': 'gmail.com'}\n",
+    "# \"\".join(F)\n",
+    "\"\".join(F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6ffe5a3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gmail.com@jeevitha'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = {'jeevitha','gmail.com'}\n",
+    "# \"\".join(f)\n",
+    "\"@\".join(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6224014f",
+   "metadata": {},
+   "source": [
+    "# startswith, endswith\n",
+    "The startwith() endwith() string methods can be used to check if a string start or ends with a specific substring or characther."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "900ba6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = \"python\"\n",
+    "# check whether given string starts with p\n",
+    "A.startswith('p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0f0cb7cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.startswith('z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07914cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check whether given string endswith n\n",
+    "A.endswith('n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f2500561",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check whether given string endswith p\n",
+    "A.endswith('p')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0cc556",
+   "metadata": {},
+   "source": [
+    "# strip\n",
+    "\n",
+    "used to remove whitespaces or special characgters before and after string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5afe57d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = \"                 python                \"\n",
+    "A.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8fc93448",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = \"@@@@@@@@@@@@python@@@@@@@@@@@@@@@@\"\n",
+    "B.strip(\"@\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e67f036b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python@@@@@@@@@@@@@@@@'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove only right side\n",
+    "B.lstrip(\"@\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4493ebee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'@@@@@@@@@@@@python'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove only right side\n",
+    "B.rstrip(\"@\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "336045bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = '(2024)'\n",
+    "c.strip(\"()\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "eb34c60a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python is easy%%%%%%%%%%%$$$$$$$$$$'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = '**********@@@@@@@@Python is easy%%%%%%%%%%%$$$$$$$$$$'\n",
+    "D.lstrip('*@')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "09c10d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'**********@@@@@@@@Python is easy'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.rstrip('%$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "38f3970f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python is easy'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.strip('*@%$') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1691bd24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, '*'),\n",
+       " (1, '*'),\n",
+       " (2, '*'),\n",
+       " (3, '*'),\n",
+       " (4, '*'),\n",
+       " (5, '*'),\n",
+       " (6, '*'),\n",
+       " (7, '*'),\n",
+       " (8, '*'),\n",
+       " (9, '*'),\n",
+       " (10, '@'),\n",
+       " (11, '@'),\n",
+       " (12, '@'),\n",
+       " (13, '@'),\n",
+       " (14, '@'),\n",
+       " (15, '@'),\n",
+       " (16, '@'),\n",
+       " (17, '@'),\n",
+       " (18, 'P'),\n",
+       " (19, 'y'),\n",
+       " (20, 't'),\n",
+       " (21, 'h'),\n",
+       " (22, 'o'),\n",
+       " (23, 'n'),\n",
+       " (24, ' '),\n",
+       " (25, 'i'),\n",
+       " (26, 's'),\n",
+       " (27, ' '),\n",
+       " (28, 'e'),\n",
+       " (29, 'a'),\n",
+       " (30, 's'),\n",
+       " (31, 'y'),\n",
+       " (32, '%'),\n",
+       " (33, '%'),\n",
+       " (34, '%'),\n",
+       " (35, '%'),\n",
+       " (36, '%'),\n",
+       " (37, '%'),\n",
+       " (38, '%'),\n",
+       " (39, '%'),\n",
+       " (40, '%'),\n",
+       " (41, '%'),\n",
+       " (42, '%'),\n",
+       " (43, '$'),\n",
+       " (44, '$'),\n",
+       " (45, '$'),\n",
+       " (46, '$'),\n",
+       " (47, '$'),\n",
+       " (48, '$'),\n",
+       " (49, '$'),\n",
+       " (50, '$'),\n",
+       " (51, '$'),\n",
+       " (52, '$')]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(enumerate(D))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdff7102",
    "metadata": {},
    "outputs": [],
    "source": []
